objects/FieloPRM_ProductPointList__c.object
<CustomObject>
    <fields>
        <fullName>F_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Point Lists</relationshipLabel>
        <relationshipName>Point_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_CountryName__c</fullName>
        <label>Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRM Country</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Point Lists</relationshipLabel>
        <relationshipName>Point_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_PRM_PointListToClone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You can clone Point Values from an existing Point List by selecting it here</inlineHelpText>
        <label>Point List to Clone</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot choose a Point List from a different Country to the one you are creating</errorMessage>
            <filterItems>
                <field>$Source.F_PRM_Country__c</field>
                <operation>equals</operation>
                <valueField>FieloPRM_ProductPointList__c.F_PRM_Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPRM_ProductPointList__c</referenceTo>
        <relationshipLabel>Cloned Point Lists</relationshipLabel>
        <relationshipName>Cloned_Point_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_StartDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Point List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>F_Country__c</columns>
        <columns>F_PRM_StartDate__c</columns>
        <columns>F_PRM_EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ID_Indonesia_Point_List_View</fullName>
        <columns>NAME</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>F_PRM_StartDate__c</columns>
        <columns>F_PRM_EndDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_Country__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <label>ID-Indonesia-Point-List-View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Point List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point Lists</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloPRM_VR_PointListStartDateEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
( F_PRM_StartDate__c   &gt;   F_PRM_EndDate__c )</errorConditionFormula>
        <errorMessage>End Date cannot be prior to Start Date</errorMessage>
    </validationRules>
</CustomObject>